--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -539,21 +539,21 @@ BEL_radical_socialist_DEF:0 "벨기에"
 BEL_social_democrat:0 "벨기에"
 BEL_social_democrat_ADJ:0 "벨기에"
 BEL_social_democrat_DEF:0 "벨기에"
-BEL_social_liberal:0 "플랑드르-왈로니아"
+BEL_social_liberal:0 "플란데런-우알로니"
 BEL_social_liberal_ADJ:0 "벨기에"
-BEL_social_liberal_DEF:0 "플랑드르-왈로니아"
-BEL_market_liberal:0 "플랑드르-왈로니아"
+BEL_social_liberal_DEF:0 "플란데런-우알로니"
+BEL_market_liberal:0 "플란데런-우알로니"
 BEL_market_liberal_ADJ:0 "벨기에"
-BEL_market_liberal_DEF:0 "플랑드르-왈로니아"
+BEL_market_liberal_DEF:0 "플란데런-우알로니"
 BEL_social_conservative:0 "벨기에"
 BEL_social_conservative_ADJ:0 "벨기에"
 BEL_social_conservative_DEF:0 "벨기에"
-BEL_authoritarian_democrat:0 "플랑드르-왈로니아"
-BEL_authoritarian_democrat_ADJ:0 "플랑드르-왈로니아"
-BEL_authoritarian_democrat_DEF:0 "플랑드르-왈로니아"
-BEL_paternal_autocrat:0 "플랑드르-왈로니아"
-BEL_paternal_autocrat_ADJ:0 "플랑드르-왈로니아"
-BEL_paternal_autocrat_DEF:0 "플랑드르-왈로니아"
+BEL_authoritarian_democrat:0 "플란데런-우알로니"
+BEL_authoritarian_democrat_ADJ:0 "플란데런-우알로니"
+BEL_authoritarian_democrat_DEF:0 "플란데런-우알로니"
+BEL_paternal_autocrat:0 "플란데런-우알로니"
+BEL_paternal_autocrat_ADJ:0 "플란데런-우알로니"
+BEL_paternal_autocrat_DEF:0 "플란데런-우알로니"
 BEL_national_populist:0 "벨기에"
 BEL_national_populist_ADJ:0 "벨기에"
 BEL_national_populist_DEF:0 "벨기에"
@@ -1738,7 +1738,7 @@ DAH_national_populist_DEF:0 "다호메이 제국"
 
 DDR_totalist:0 "프로이센 공화국"
 DDR_totalist_ADJ:0 "프로이센"
-DDR_totalist_DEF:0 "the 프로이센 공화국"
+DDR_totalist_DEF:0 "프로이센 공화국"
 DDR_syndicalist:0 "프로이센 공화국"
 DDR_syndicalist_ADJ:0 "프로이센"
 DDR_syndicalist_DEF:0 "프로이센 공화국"
@@ -2232,36 +2232,36 @@ FIN_national_populist:0 "핀란드"
 FIN_national_populist_ADJ:0 "핀란드"
 FIN_national_populist_DEF:0 "핀란드"
 
-FLN_totalist:0 "플랑드르 공동체 공화국"
-FLN_totalist_ADJ:0 "플랑드르"
-FLN_totalist_DEF:0 "플랑드르 공동체 공화국"
-FLN_syndicalist:0 "플랑드르 공동체 공화국"
-FLN_syndicalist_ADJ:0 "플랑드르"
-FLN_syndicalist_DEF:0 "플랑드르 공동체 공화국"
-FLN_radical_socialist:0 "플랑드르 공동체 공화국"
-FLN_radical_socialist_ADJ:0 "플랑드르"
-FLN_radical_socialist_DEF:0 "플랑드르 공동체 공화국"
-FLN_social_democrat:0 "플랑드르"
-FLN_social_democrat_ADJ:0 "플랑드르"
-FLN_social_democrat_DEF:0 "플랑드르"
-FLN_social_liberal:0 "플랑드르"
-FLN_social_liberal_ADJ:0 "플랑드르"
-FLN_social_liberal_DEF:0 "플랑드르"
-FLN_market_liberal:0 "플랑드르"
-FLN_market_liberal_ADJ:0 "플랑드르"
-FLN_market_liberal_DEF:0 "플랑드르"
-FLN_social_conservative:0 "플랑드르"
-FLN_social_conservative_ADJ:0 "플랑드르"
-FLN_social_conservative_DEF:0 "플랑드르"
-FLN_authoritarian_democrat:0 "플랑드르"
-FLN_authoritarian_democrat_ADJ:0 "플랑드르"
-FLN_authoritarian_democrat_DEF:0 "플랑드르"
-FLN_paternal_autocrat:0 "플랑드르"
-FLN_paternal_autocrat_ADJ:0 "플랑드르"
-FLN_paternal_autocrat_DEF:0 "플랑드르"
-FLN_national_populist:0 "플랑드르"
-FLN_national_populist_ADJ:0 "플랑드르"
-FLN_national_populist_DEF:0 "플랑드르"
+FLN_totalist:0 "플란데런 공동체 공화국"
+FLN_totalist_ADJ:0 "플란데런"
+FLN_totalist_DEF:0 "플란데런 공동체 공화국"
+FLN_syndicalist:0 "플란데런 공동체 공화국"
+FLN_syndicalist_ADJ:0 "플란데런"
+FLN_syndicalist_DEF:0 "플란데런 공동체 공화국"
+FLN_radical_socialist:0 "플란데런 공동체 공화국"
+FLN_radical_socialist_ADJ:0 "플란데런"
+FLN_radical_socialist_DEF:0 "플란데런 공동체 공화국"
+FLN_social_democrat:0 "플란데런"
+FLN_social_democrat_ADJ:0 "플란데런"
+FLN_social_democrat_DEF:0 "플란데런"
+FLN_social_liberal:0 "플란데런"
+FLN_social_liberal_ADJ:0 "플란데런"
+FLN_social_liberal_DEF:0 "플란데런"
+FLN_market_liberal:0 "플란데런"
+FLN_market_liberal_ADJ:0 "플란데런"
+FLN_market_liberal_DEF:0 "플란데런"
+FLN_social_conservative:0 "플란데런"
+FLN_social_conservative_ADJ:0 "플란데런"
+FLN_social_conservative_DEF:0 "플란데런"
+FLN_authoritarian_democrat:0 "플란데런"
+FLN_authoritarian_democrat_ADJ:0 "플란데런"
+FLN_authoritarian_democrat_DEF:0 "플란데런"
+FLN_paternal_autocrat:0 "플란데런"
+FLN_paternal_autocrat_ADJ:0 "플란데런"
+FLN_paternal_autocrat_DEF:0 "플란데런"
+FLN_national_populist:0 "플란데런"
+FLN_national_populist_ADJ:0 "플란데런"
+FLN_national_populist_DEF:0 "플란데런"
 
 FNG_totalist:0 "봉천 코뮌"
 FNG_totalist_ADJ:0 "봉천"
@@ -5983,36 +5983,36 @@ SCA_national_populist:0 "스칸디나비아"
 SCA_national_populist_ADJ:0 "스칸디나비아"
 SCA_national_populist_DEF:0 "스칸디나비아"
 
-SCH_totalist:0 "슐레스비히-홀슈타인"
-SCH_totalist_ADJ:0 "슐레스비히-홀슈타인"
-SCH_totalist_DEF:0 "슐레스비히-홀슈타인"
-SCH_syndicalist:0 "슐레스비히-홀슈타인"
-SCH_syndicalist_ADJ:0 "슐레스비히-홀슈타인"
-SCH_syndicalist_DEF:0 "슐레스비히-홀슈타인"
-SCH_radical_socialist:0 "슐레스비히-홀슈타인"
-SCH_radical_socialist_ADJ:0 "슐레스비히-홀슈타인"
-SCH_radical_socialist_DEF:0 "슐레스비히-홀슈타인"
-SCH_social_democrat:0 "슐레스비히-홀슈타인"
-SCH_social_democrat_ADJ:0 "슐레스비히-홀슈타인"
-SCH_social_democrat_DEF:0 "슐레스비히-홀슈타인"
-SCH_social_liberal:0 "슐레스비히-홀슈타인"
-SCH_social_liberal_ADJ:0 "슐레스비히-홀슈타인"
-SCH_social_liberal_DEF:0 "슐레스비히-홀슈타인"
-SCH_market_liberal:0 "슐레스비히-홀슈타인"
-SCH_market_liberal_ADJ:0 "슐레스비히-홀슈타인"
-SCH_market_liberal_DEF:0 "슐레스비히-홀슈타인"
-SCH_social_conservative:0 "슐레스비히-홀슈타인"
-SCH_social_conservative_ADJ:0 "슐레스비히-홀슈타인"
-SCH_social_conservative_DEF:0 "슐레스비히-홀슈타인"
-SCH_authoritarian_democrat:0 "슐레스비히-홀슈타인"
-SCH_authoritarian_democrat_ADJ:0 "슐레스비히-홀슈타인"
-SCH_authoritarian_democrat_DEF:0 "슐레스비히-홀슈타인"
-SCH_paternal_autocrat:0 "슐레스비히-홀슈타인"
-SCH_paternal_autocrat_ADJ:0 "슐레스비히-홀슈타인"
-SCH_paternal_autocrat_DEF:0 "슐레스비히-홀슈타인"
-SCH_national_populist:0 "슐레스비히-홀슈타인"
-SCH_national_populist_ADJ:0 "슐레스비히-홀슈타인"
-SCH_national_populist_DEF:0 "슐레스비히-홀슈타인"
+SCH_totalist:0 "슐레스비히홀슈타인"
+SCH_totalist_ADJ:0 "슐레스비히홀슈타인"
+SCH_totalist_DEF:0 "슐레스비히홀슈타인"
+SCH_syndicalist:0 "슐레스비히홀슈타인"
+SCH_syndicalist_ADJ:0 "슐레스비히홀슈타인"
+SCH_syndicalist_DEF:0 "슐레스비히홀슈타인"
+SCH_radical_socialist:0 "슐레스비히홀슈타인"
+SCH_radical_socialist_ADJ:0 "슐레스비히홀슈타인"
+SCH_radical_socialist_DEF:0 "슐레스비히홀슈타인"
+SCH_social_democrat:0 "슐레스비히홀슈타인"
+SCH_social_democrat_ADJ:0 "슐레스비히홀슈타인"
+SCH_social_democrat_DEF:0 "슐레스비히홀슈타인"
+SCH_social_liberal:0 "슐레스비히홀슈타인"
+SCH_social_liberal_ADJ:0 "슐레스비히홀슈타인"
+SCH_social_liberal_DEF:0 "슐레스비히홀슈타인"
+SCH_market_liberal:0 "슐레스비히홀슈타인"
+SCH_market_liberal_ADJ:0 "슐레스비히홀슈타인"
+SCH_market_liberal_DEF:0 "슐레스비히홀슈타인"
+SCH_social_conservative:0 "슐레스비히홀슈타인"
+SCH_social_conservative_ADJ:0 "슐레스비히홀슈타인"
+SCH_social_conservative_DEF:0 "슐레스비히홀슈타인"
+SCH_authoritarian_democrat:0 "슐레스비히홀슈타인"
+SCH_authoritarian_democrat_ADJ:0 "슐레스비히홀슈타인"
+SCH_authoritarian_democrat_DEF:0 "슐레스비히홀슈타인"
+SCH_paternal_autocrat:0 "슐레스비히홀슈타인"
+SCH_paternal_autocrat_ADJ:0 "슐레스비히홀슈타인"
+SCH_paternal_autocrat_DEF:0 "슐레스비히홀슈타인"
+SCH_national_populist:0 "슐레스비히홀슈타인"
+SCH_national_populist_ADJ:0 "슐레스비히홀슈타인"
+SCH_national_populist_DEF:0 "슐레스비히홀슈타인"
 
 SCT_totalist:0 "스코틀랜드 연방"
 SCT_totalist_ADJ:0 "스코틀랜드"
@@ -6457,27 +6457,27 @@ SPO_syndicalist_DEF:0 "과루자 연방"
 SPO_radical_socialist:0 "과루자 연방"
 SPO_radical_socialist_ADJ:0 "과루자"
 SPO_radical_socialist_DEF:0 "과루자 연방"
-SPO_social_democrat:0 "상 파울루"
-SPO_social_democrat_ADJ:0 "상 파울루"
-SPO_social_democrat_DEF:0 "상 파울루"
-SPO_social_liberal:0 "상 파울루"
-SPO_social_liberal_ADJ:0 "상 파울루"
-SPO_social_liberal_DEF:0 "상 파울루"
-SPO_market_liberal:0 "상 파울루"
-SPO_market_liberal_ADJ:0 "상 파울루"
-SPO_market_liberal_DEF:0 "상 파울루"
-SPO_social_conservative:0 "상 파울루"
-SPO_social_conservative_ADJ:0 "상 파울루"
-SPO_social_conservative_DEF:0 "상 파울루"
-SPO_authoritarian_democrat:0 "상 파울루"
-SPO_authoritarian_democrat_ADJ:0 "상 파울루"
-SPO_authoritarian_democrat_DEF:0 "상 파울루"
-SPO_paternal_autocrat:0 "상 파울루"
-SPO_paternal_autocrat_ADJ:0 "상 파울루"
-SPO_paternal_autocrat_DEF:0 "상 파울루"
-SPO_national_populist:0 "상 파울루"
-SPO_national_populist_ADJ:0 "상 파울루"
-SPO_national_populist_DEF:0 "상 파울루"
+SPO_social_democrat:0 "상파울루"
+SPO_social_democrat_ADJ:0 "상파울루"
+SPO_social_democrat_DEF:0 "상파울루"
+SPO_social_liberal:0 "상파울루"
+SPO_social_liberal_ADJ:0 "상파울루"
+SPO_social_liberal_DEF:0 "상파울루"
+SPO_market_liberal:0 "상파울루"
+SPO_market_liberal_ADJ:0 "상파울루"
+SPO_market_liberal_DEF:0 "상파울루"
+SPO_social_conservative:0 "상파울루"
+SPO_social_conservative_ADJ:0 "상파울루"
+SPO_social_conservative_DEF:0 "상파울루"
+SPO_authoritarian_democrat:0 "상파울루"
+SPO_authoritarian_democrat_ADJ:0 "상파울루"
+SPO_authoritarian_democrat_DEF:0 "상파울루"
+SPO_paternal_autocrat:0 "상파울루"
+SPO_paternal_autocrat_ADJ:0 "상파울루"
+SPO_paternal_autocrat_DEF:0 "상파울루"
+SPO_national_populist:0 "상파울루"
+SPO_national_populist_ADJ:0 "상파울루"
+SPO_national_populist_DEF:0 "상파울루"
 
 SPR_totalist:0 "이베리아 연방"
 SPR_totalist_ADJ:0 "아나키스트-스페인"
@@ -7595,36 +7595,36 @@ WAD_social_conservatist:0 "와다이"
 WAD_social_conservatist_ADJ:0 "와다이"
 WAD_social_conservatist_DEF:0 "와다이"
 
-WAL_totalist:0 "웨일즈 연방"
-WAL_totalist_ADJ:0 "웨일즈"
-WAL_totalist_DEF:0 "웨일즈 연방"
-WAL_syndicalist:0 "웨일즈 연방"
-WAL_syndicalist_ADJ:0 "웨일즈"
-WAL_syndicalist_DEF:0 "웨일즈 연방"
-WAL_radical_socialist:0 "웨일즈 연방"
-WAL_radical_socialist_ADJ:0 "웨일즈"
-WAL_radical_socialist_DEF:0 "웨일즈 연방"
-WAL_social_democrat:0 "웨일즈"
-WAL_social_democrat_ADJ:0 "웨일즈"
-WAL_social_democrat_DEF:0 "웨일즈"
-WAL_social_liberal:0 "웨일즈"
-WAL_social_liberal_ADJ:0 "웨일즈"
-WAL_social_liberal_DEF:0 "웨일즈"
-WAL_market_liberal:0 "웨일즈"
-WAL_market_liberal_ADJ:0 "웨일즈"
-WAL_market_liberal_DEF:0 "웨일즈"
-WAL_social_conservative:0 "웨일즈"
-WAL_social_conservative_ADJ:0 "웨일즈"
-WAL_social_conservative_DEF:0 "웨일즈"
-WAL_authoritarian_democrat:0 "웨일즈 공국"
-WAL_authoritarian_democrat_ADJ:0 "웨일즈"
-WAL_authoritarian_democrat_DEF:0 "웨일즈 공국"
-WAL_paternal_autocrat:0 "웨일즈 공국"
-WAL_paternal_autocrat_ADJ:0 "웨일즈"
-WAL_paternal_autocrat_DEF:0 "웨일즈 공국"
-WAL_national_populist:0 "웨일즈 공국"
-WAL_national_populist_ADJ:0 "웨일즈"
-WAL_national_populist_DEF:0 "웨일즈 공국"
+WAL_totalist:0 "웨일스 연방"
+WAL_totalist_ADJ:0 "웨일스"
+WAL_totalist_DEF:0 "웨일스 연방"
+WAL_syndicalist:0 "웨일스 연방"
+WAL_syndicalist_ADJ:0 "웨일스"
+WAL_syndicalist_DEF:0 "웨일스 연방"
+WAL_radical_socialist:0 "웨일스 연방"
+WAL_radical_socialist_ADJ:0 "웨일스"
+WAL_radical_socialist_DEF:0 "웨일스 연방"
+WAL_social_democrat:0 "웨일스"
+WAL_social_democrat_ADJ:0 "웨일스"
+WAL_social_democrat_DEF:0 "웨일스"
+WAL_social_liberal:0 "웨일스"
+WAL_social_liberal_ADJ:0 "웨일스"
+WAL_social_liberal_DEF:0 "웨일스"
+WAL_market_liberal:0 "웨일스"
+WAL_market_liberal_ADJ:0 "웨일스"
+WAL_market_liberal_DEF:0 "웨일스"
+WAL_social_conservative:0 "웨일스"
+WAL_social_conservative_ADJ:0 "웨일스"
+WAL_social_conservative_DEF:0 "웨일스"
+WAL_authoritarian_democrat:0 "웨일스 공국"
+WAL_authoritarian_democrat_ADJ:0 "웨일스"
+WAL_authoritarian_democrat_DEF:0 "웨일스 공국"
+WAL_paternal_autocrat:0 "웨일스 공국"
+WAL_paternal_autocrat_ADJ:0 "웨일스"
+WAL_paternal_autocrat_DEF:0 "웨일스 공국"
+WAL_national_populist:0 "웨일스 공국"
+WAL_national_populist_ADJ:0 "웨일스"
+WAL_national_populist_DEF:0 "웨일스 공국"
 
 WGR_totalist:0 "라인 사회주의 공화국"
 WGR_totalist_ADJ:0 "라인"
@@ -7688,36 +7688,36 @@ WHR_national_populist:0 "벨로루시"
 WHR_national_populist_ADJ:0 "루테니아"
 WHR_national_populist_DEF:0 "벨로루시"
 
-WLL_totalist:0 "왈로니아 공동체 공화국"
-WLL_totalist_ADJ:0 "왈로니아"
-WLL_totalist_DEF:0 "왈로니아 공동체 공화국"
-WLL_syndicalist:0 "왈로니아 공동체 공화국"
-WLL_syndicalist_ADJ:0 "왈로니아"
-WLL_syndicalist_DEF:0 "왈로니아 공동체 공화국"
-WLL_radical_socialist:0 "왈로니아 공동체 공화국"
-WLL_radical_socialist_ADJ:0 "왈로니아"
-WLL_radical_socialist_DEF:0 "왈로니아 공동체 공화국"
-WLL_social_democrat:0 "왈로니아"
-WLL_social_democrat_ADJ:0 "왈로니아"
-WLL_social_democrat_DEF:0 "왈로니아"
-WLL_social_liberal:0 "왈로니아"
-WLL_social_liberal_ADJ:0 "왈로니아"
-WLL_social_liberal_DEF:0 "왈로니아"
-WLL_market_liberal:0 "왈로니아"
-WLL_market_liberal_ADJ:0 "왈로니아"
-WLL_market_liberal_DEF:0 "왈로니아"
-WLL_social_conservative:0 "왈로니아"
-WLL_social_conservative_ADJ:0 "왈로니아"
-WLL_social_conservative_DEF:0 "왈로니아"
-WLL_authoritarian_democrat:0 "왈로니아"
-WLL_authoritarian_democrat_ADJ:0 "왈로니아"
-WLL_authoritarian_democrat_DEF:0 "왈로니아"
-WLL_paternal_autocrat:0 "왈로니아"
-WLL_paternal_autocrat_ADJ:0 "왈로니아"
-WLL_paternal_autocrat_DEF:0 "왈로니아"
-WLL_national_populist:0 "왈로니아"
-WLL_national_populist_ADJ:0 "왈로니아"
-WLL_national_populist_DEF:0 "왈로니아"
+WLL_totalist:0 "우알로니 공동체 공화국"
+WLL_totalist_ADJ:0 "우알로니"
+WLL_totalist_DEF:0 "우알로니 공동체 공화국"
+WLL_syndicalist:0 "우알로니 공동체 공화국"
+WLL_syndicalist_ADJ:0 "우알로니"
+WLL_syndicalist_DEF:0 "우알로니 공동체 공화국"
+WLL_radical_socialist:0 "우알로니 공동체 공화국"
+WLL_radical_socialist_ADJ:0 "우알로니"
+WLL_radical_socialist_DEF:0 "우알로니 공동체 공화국"
+WLL_social_democrat:0 "우알로니"
+WLL_social_democrat_ADJ:0 "우알로니"
+WLL_social_democrat_DEF:0 "우알로니"
+WLL_social_liberal:0 "우알로니"
+WLL_social_liberal_ADJ:0 "우알로니"
+WLL_social_liberal_DEF:0 "우알로니"
+WLL_market_liberal:0 "우알로니"
+WLL_market_liberal_ADJ:0 "우알로니"
+WLL_market_liberal_DEF:0 "우알로니"
+WLL_social_conservative:0 "우알로니"
+WLL_social_conservative_ADJ:0 "우알로니"
+WLL_social_conservative_DEF:0 "우알로니"
+WLL_authoritarian_democrat:0 "우알로니"
+WLL_authoritarian_democrat_ADJ:0 "우알로니"
+WLL_authoritarian_democrat_DEF:0 "우알로니"
+WLL_paternal_autocrat:0 "우알로니"
+WLL_paternal_autocrat_ADJ:0 "우알로니"
+WLL_paternal_autocrat_DEF:0 "우알로니"
+WLL_national_populist:0 "우알로니"
+WLL_national_populist_ADJ:0 "우알로니"
+WLL_national_populist_DEF:0 "우알로니"
 
 XSM_totalist:0 "서북 코뮌"
 XSM_totalist_ADJ:0 "서북"
