--- a/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Dominion_of_India_l_english.yml
@@ -48,6 +48,9 @@ DEH_jinnah_wins:0 "The platform is approved and the §YHome Rule Party§! wins r
 DEH_socialist_wins:0 "The platform is approved and the §YSocialists§! win the election\n"
 DEH_unionist_wins:0 "The platform is not approved and the §YUnionist Party§! wins the election\n"
 DEH_gandhi_hos:0 "§YMohandas Karamchand Gandhi§! becomes Head of State until the election\n"
+DEH_canship_tt:0 "One cruiser and two destroyers will be transfered from Canada."
+DEH_neprev_tt:0 "Two loyalist militia divisions will be formed."
+DEH_prfsec_tt:0 "Five secessionist divisions will be formed in the Princely Federation."
 
 ### Ideas ###
 DEH_princely_power:0 "왕의 힘"
@@ -56,9 +59,9 @@ DEH_princely_domination:0 "Princely Domination of Government"
 DEH_princely_pension:0 "Princely Pension"
 DEH_princes_removed:0 "번왕이 권력으로부터 축출됨"
 DEH_unitedindia:0 "통일된 인도!"
-DEH_trade_unions_banned:0 "노동조합이 금지되다"
+DEH_trade_unions_banned:0 "노동조합 금지"
 DEH_workers_protected:0 "정부가 노동자를 보호하다"
-DEH_support_unions:0 "Unions Supported by the Government"
+DEH_support_unions:0 "정부가 노동조합을 지지하다"
 DEH_fiveyearplan:0 "5개년 계획"
 DEH_freemarket:0 "자유 시장 중점"
 DEH_balance:0 "균형잡힌 경제"
