--- a/Kaiserreich Korean Translation/localisation/KR_Egypt_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Egypt_l_english.yml
@@ -23,15 +23,14 @@ EGY_national_populist_party:0 "국민이슬람당"
 EGY_national_populist_party_long:0 "국민이슬람당"
 
 ### Tooltips ###
-unlock_focuses:0 "§GThis focus will eventually be automatically bypassed and will unlock the other focuses§!\n"
 royal_guard:0 "§GThis focus will mobilise new regiments of the Sultan's Elite Guard to protect our noble ruler.§!\n"
 EGY_farouk_becomes_sultan:0 "Prince Farouk ascends the throne as the Sultan of Egypt"
 EGY_desert_tt:0 "§GDesert Combat Training§! will help better enhance our ability to fight in the Desert.\n"
 EGY_camel_corps_tt:0 "§GRoyal Camel Corps§! will help better enhance our Cavalry to fight in the Desert.\n"
-ENG_egypt_owns_sudan_tt:0 "Egypt controls Sudan"
-EGY_send_out_the_invitations:0 "Send out the invitations for the Cairo Conference"
+ENG_egypt_owns_sudan_tt:0 "이집트가 수단을 제어합니다"
+EGY_send_out_the_invitations:0 "카이로 회담 초청장을 발송합니다"
 EGY_cairo_conference_economic_reaction:0 "The other delegates will debate the economic proposal"
-EGY_cairo_conference_idris_speaks:0 "The exiled king of Libya will speak soon"
+EGY_cairo_conference_idris_speaks:0 "리비아의 망명한 왕이 곧 연설을 할 것입니다"
 EGY_cairo_conference_idris_reaction:0 "The other delegates will react to Idris."
 EGY_cairo_conference_dealing_with_ottomans:0 "We shall next deal with the Ottoman issue"
 EGY_cairo_conference_dealing_with_ottomans_reaction:0 "The other delegates will react to our plan for the Ottomans."
@@ -53,7 +52,7 @@ EGY_ottoman_plan_support:0 "Supported Egypt's plan for the Ottomans"
 EGY_ottoman_plan_no_support:0 "Did not supported Egypt's plan for the Ottomans"
 EGY_cairo_conference_ottoman_reaction:0 "declared support against the Ottomans"
 EGY_cairo_conference_libya_reaction:0 "supported the exiled king Idris"
-EGY_refused_to_join_cairo_pact:0 "Refused to join the Cairo Pact"
+EGY_refused_to_join_cairo_pact:0 "카이로 협정 가입 거부"
 
 ### Flags ###
 EGY_farouks_reforms_begun:0 "Sultan Farouk has begun his reforms"
