--- a/Kaiserreich Korean Translation/localisation/KR_Emilia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Emilia_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
 EMI_social_democrat_party:0 "PPE"
@@ -125,10 +125,10 @@ EMI_cispanadanian_revival_desc:0 "The Emilian language, while quite similar to I
 ### Ideas ###
 EMI_nationalism_dialects:0 "Emilian Language Campaign"
 EMI_nationalism_dialects_desc:0 "Modena has begun an ambitious campaign to restore the Emilian language."
-EMI_ducal_constitution:0 "Ducal Constitution"
-EMI_ducal_constitution_desc:0 "The constitution of Modena both recognizes the authority of the Duke and mandates that he rule with the interests of the people in mind."
-EMI_vroom:0 "Masterwork Engines"
-EMI_vroom_desc:0 "Modena's automobile engines are among the finest in the world."
+#EMI_ducal_constitution:0 "Ducal Constitution" already defined above as a focus
+#EMI_ducal_constitution_desc:0 "The constitution of Modena both recognizes the authority of the Duke and mandates that he rule with the interests of the people in mind." already defined above as a focus description
+#EMI_vroom:0 "Masterwork Engines" already defined above as a focus
+#EMI_vroom_desc:0 "Modena's automobile engines are among the finest in the world." already defined above as a focus
 EMI_carmaking:0 "Automotive Specialization"
 EMI_carmaking_desc:0 "Modena invests heavily in its automotive industry."
 EMI_ruraleco2:0 "Recovered Rural Production"
