--- a/Kaiserreich Korean Translation/localisation/KR_Gabon_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Gabon_l_english.yml
@@ -98,10 +98,13 @@ GAB_push_independence_idea:0 "독립 압박"
 GAB_push_independence_idea_desc:0 "Gabon has felt its first taste of freedom, and is not going to give up the oppurtunity to be independent so easily!"
 
 GAB_Dahomey_Coop_idea:0 "다호메이와 협력"
-GAB_Cooperate_with_Dahomey_desc:0 "The friend of our friend is also OUR friend, cooperating with Dahomey helps us both"
+# GAB_Cooperate_with_Dahomey_desc:0 "The friend of our friend is also OUR friend, cooperating with Dahomey helps us both" already defined above as a focus
 
 GAB_French_Advisors_idea:0 "프랑스 고문관"
 GAB_French_Advisors_idea_desc:0 "The Commune of France has sent us several well experienced advisers to help us in our struggle"
 
 GAB_The_Gabonese_Constitution:0 "가봉 헌법"
 GAB_The_Gabonese_Constitution_desc:0 "The ratification of a constitution has given much needed legitimacy to Gabon's sovereignty, and has brought many in our nation together"
+
+### Tooltips ###
+GAB_recruit_tt:0 "2개의 민병대 사단이 소집될 것입니다."
