--- a/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Serbia_l_english.yml
@@ -61,7 +61,7 @@ SER_crown_the_king:0 "국왕 선출"
 SER_crown_the_king_desc:0 "Petar Bojović has been regent of Serbia for almost a decade. So far he had to continue his rule to prevent Austrian aggression. With the Ausgleich happening in Austria, there is finally a chance to install Alexander, former Crown Prince of Serbia, as the new King. The King will still have to decide whether to rule as an autocrat or to establish a constitutional monarchy."
 SER_absolutism:0 "전제주의"
 SER_absolutism_desc:0 "Now that the King has been restored, the best course of action is to rule as an autocrat, leaving little room for opposition. Serbia is in a precarious position and strong leadership is needed."
-SER_monument_to_the_unknown_hero:0 "정체불명 영웅 기념비"
+SER_monument_to_the_unknown_hero:0 "무명 용사 기념비"
 SER_monument_to_the_unknown_hero_desc:0 "The construction of a monument to the Unknown Hero will be ordered by King Alexander II of Serbia, to commemorate the victims of the Weltkrieg. Marked only by the dates 1912-1918, the monument also commemorates those lost in the Balkan Wars. The monument is designed by the renowned sculptor Ivan Mestrovic."
 SER_glory_to_the_king:0 "국왕에게 영광을"
 SER_glory_to_the_king_desc:0 "King Alexander will lead us to victory in the conflicts to come. His leadership will ensure the survival of the Serbian state and will help to propel us to a leading position on the Balkans."
