--- a/Kaiserreich Korean Translation/localisation/KR_Grao_Para_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Grao_Para_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
 AMA_social_democrat_party:0 "PSD"
@@ -77,7 +77,6 @@ AMA_army_modernization:0 "Army Modernisation"
 AMA_equipment2:0 "Better Guns"
 AMA_doctrine2:0 "Foreign Officers"
 AMA_paratroopers:0 "Above The Jungle"
-AMA_pare:0 "River Warfare"
 AMA_jungle_skies:0 "Jungle Skies"
 AMA_rule_skies:0 "Rule the Air"
 AMA_bomber:0 "Bomber Models"
@@ -118,7 +117,7 @@ AMA_zona_franca_desc:0 ""
 AMA_extract_wealth_desc:0 "Vast deposits of gold and other natural resources remain unexploited. We must assess these deposits and begin to export our nation's bounty."
 AMA_garimpo_desc:0 "Our nation's resource deposits have begun to attractthe attention of fortune seekers from around the continent and the world. The gold mines, especially, have swelled with workers and Amazonian sediment is increasingly panned for gold."
 AMA_leite_do_pau_desc:0 ""
-AMA_asserting_independence_desc:0 ""
+AMA_asserting_independence_desc:0 "While we may rely upon foreign powers for protection, we shall not be their simple lapdog. While we seek not to rebel, we must assert our right to forge our own path."
 AMA_armed_forces_desc:0 ""
 AMA_equipment1_desc:0 ""
 AMA_doctrine1_desc:0 ""
@@ -127,7 +126,6 @@ AMA_army_modernization_desc:0 ""
 AMA_equipment2_desc:0 ""
 AMA_doctrine2_desc:0 ""
 AMA_paratroopers_desc:0 ""
-AMA_pare_desc:0 ""
 AMA_jungle_skies_desc:0 ""
 AMA_rule_skies_desc:0 ""
 AMA_bomber_desc:0 ""
