--- a/Kaiserreich Korean Translation/localisation/KR_Jabal_Shammar_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Jabal_Shammar_l_english.yml
@@ -151,10 +151,10 @@ JBS_elective_bani_sakhir_syria_develop:0 "Develop Syrian Centers"
 JBS_elective_bani_sakhir_syria_develop_desc:0 "The large cities in the eastern Mashriq lack a noblemen prestigious enough to be elected sultan, and thus requested the Howleitat to represent their interests if at all possible. For too long under the boot of foreign powers, they finally can excell at their crafts in peace"
 JBS_elective_rashidi:0 "Elect a Rashid"
 JBS_elective_rashidi_desc:0 "After much deliberation by our councillors, we have opted to grant the leadership of our Alliance to the house of Rashid, the founders of our Alliance and lords of Ha'il"
-JBS_elective_rashidi_najdi_peace:0 "Peace in Najd"
-JBS_elective_rashidi_najdi_peace_desc:0 "It's over; after 100 years it's finally over. The Saudis, despite their tricks and twists, could not stand against us in thee end. Now we must take steps to heal the horrible wounds of this long war and bring about a new age of peace"
-JBS_elective_rashidi_rid_najd_of_wahhabism:0 "Clease the Stain of Wahhabism"
-JBS_elective_rashidi_rid_najd_of_wahhabism_desc:0 "Acting as strongmen for the Saudi state, the Wahabbi cult of the Ikhwan has killed and looted for decades under the guise of acting to preserve the 'purity' of our faith. They are a stain on our history, our land and even the name of the Prophet, which was used by them as an excuse for thievery and murder"
+JBS_elective_rashidi_nejdi_peace:0 "Peace in Nejd"
+JBS_elective_rashidi_nejdi_peace_desc:0 "It's over; after 100 years it's finally over. The Saudis, despite their tricks and twists, could not stand against us in thee end. Now we must take steps to heal the horrible wounds of this long war and bring about a new age of peace"
+JBS_elective_rashidi_rid_nejd_of_wahhabism:0 "Cleanse the Stain of Wahhabism"
+JBS_elective_rashidi_rid_nejd_of_wahhabism_desc:0 "Acting as strongmen for the Saudi state, the Wahabbi cult of the Ikhwan has killed and looted for decades under the guise of acting to preserve the 'purity' of our faith. They are a stain on our history, our land and even the name of the Prophet, which was used by them as an excuse for thievery and murder"
 JBS_elective_hashemite:0 "Elect a Hashemite"
 JBS_elective_hashemite_desc:0 "After much deliberation by our councillors, we have opted to grant the leadership of our Alliance to the Hashemites, and ancient and respected dynasty whose very name is known even in the far corners of the globe"
 JBS_elective_hashemite_pan_arabist_ethos:0 "Pan Arabic Ethos"
@@ -177,7 +177,7 @@ JBS_future_of_arabia_desc:0 "To ensure a better future, we must restore our educ
 JBS_trading_expertise:0 "Trading Expertise"
 JBS_trading_expertise_desc:0 "For millenia the Arab people had become rich not due to the bounty of the land, but by it's expertise in trading. Now more than ever we are strapped for funds and goods, and we need to put all the merchants and diplomats we can into good use!"
 JBS_arms_imports:0 "Military Imports"
-JBS_arms_imports:0 "We need weapons in order to to defeat the ottomans and anyone that would stand in the way of Arabia. To that end, let us import our weapons from abroad."
+JBS_arms_imports_desc:0 "We need weapons in order to to defeat the ottomans and anyone that would stand in the way of Arabia. To that end, let us import our weapons from abroad."
 JBS_weapons_aqusitions:0 "Weapons Acquisitions"
 JBS_weapons_aqusitions_desc:0 "'This is just a misunderstanding! These are just hunting rifles for the Emir's personal collection. I assure you that everything is in order'"
 JBS_reverse_engineering:0 "Reverse Engineering"
@@ -238,7 +238,7 @@ JBS_mobilize_the_tribes_desc:0 "Every tribe in these lands has sworn to help us,
 JBS_army_command_modernization:0 "Army Command Modernisation"
 JBS_army_command_modernization_desc:0 "It's high time we modernise the way our army is led, away from the lords and into the Army, which will be properly organised following foreign military doctrine, with different branches for different types of units and theaters"
 JBS_establish_arabian_airforce:0 "Establish Arabian Aiforce"
-JBS_establish_arabian_airforce_desc:0 "We should look into establishing the first ever Arabian air-force and rule the skies above the desert dunes.  "
+JBS_establish_arabian_airforce_desc:0 "We should look into establishing the first ever Arabian air-force and rule the skies above the desert dunes."
 JBS_establish_arabian_mechanized_brigades:0 "Establish Mechanised Brigades"
 JBS_establish_arabian_mechanized_brigades_desc:0 "In this new age, we must ensure our capacity to adapt is as present as our bravery and ingeniuty. Mechanised and Motorised infantry forces will play a grand part in our reconquest of the homeland!"
 JBS_establish_new_arabian_army:0 "The New Arabian Army"
