--- a/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
@@ -19,7 +19,7 @@ LEC_economic_meltdown_desc:0 "세계 경제가 무너지고 있고 우리는 공
 LEC_recruitment_crisis:0 "실업난"
 LEC_recruitment_crisis_desc:0 "We face a large scale recruitment crisis. We are unable to attract the native population to sign up in large numbers and while most foreigners that are residents are either civil servants, traders or non-willing to sign up."
 LEC_police_force:0 "수도 경찰"
-LEC_police_force:0 "Now that extra funding is being plowed into the police we are able to entice more natives to join our Police units and more foreigners are now travelling to the cities to sign up."
+LEC_police_force_desc:0 "Now that extra funding is being plowed into the police we are able to entice more natives to join our Police units and more foreigners are now travelling to the cities to sign up."
 LEC_triad_gangs:0 "삼합회 폭력배"
 LEC_traid_gangs_desc:0 "The Red Pole has took charge of both the Police force and our assorted triad associations, combing them into a loosely aligned but cohesive unit. They are able to both police, extort and fight as required."
 LEC_reforged_economy:0 "Reforged Economy"
@@ -97,7 +97,7 @@ LEC_REBIRTH_AOG:0 "공사관 도시의 재탄생"
 LEC_COMM_ENN_CHI:0 "공통의 적을 가짐"
 CHI_LEC_ALL:0 "중국-공사관 도시 동맹"
 LEC_CHI_ALL:0 "중국-공사관 도시 동맹"
-INVEST_SEIZED:0 "투자 점유"
+#INVEST_SEIZED:0 "Investments seized" already defined above as an idea
 INVEST_NO_SEIZED:0 "Investments left alone"
 INVESTMENTS_SEIZED:0 "투자 점유"
 INVESTMENTS_COMPENSATED:0 "Investments seized, but compensated"
